# gl_render

./: .gitignore  CMakeLists.txt  README.md
includes/learnopengl/: camera.h  mesh.h  model.h  shader.h
script/: 7scenes_intrinsics.txt  7scenes_sc_projection.sh  cambridge_intrinsics.txt  cambridge_intrinsics_dsac.txt  cambridge_sc_projection.sh  mesh_projection.sh  mesh_projection2.sh  mesh_projection3.sh  mesh_projection4.sh  mesh_projection_dusk.sh  mesh_projection_hsc_dusk.sh  mesh_projection_hsc_g4.sh  mesh_projection_hsc_k2.sh  mesh_projection_rain.sh  mmw_intrinsics.txt  mmw_projection.sh  sc_projection.sh  sc_projection_dsac.sh  sense_intrinsics.txt  sense_projection.sh  traj_w.txt
src/render/: 8.1.debug.fs  8.1.debug.vs  8.1.g_buffer.fs  8.1.g_buffer.scene_coordinate.fs  8.1.g_buffer.scene_coordinate.vs  8.1.g_buffer.vs  gl_renderer.cpp  gl_renderer.hpp  main.cpp  scene_coordinate_projection.cpp  scene_coordinate_projection.hpp  test.cpp  util.hpp
